target/generated-sources/antlr4/com/compiladores/minicompilador/interprete2022/minicompiladorParser.java
// Generated from com/compiladores/minicompilador/interprete2022/minicompilador.g4 by ANTLR 4.5.1
package com.compiladores.minicompilador.interprete2022;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class minicompiladorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, INT=2, STRING=3, PRINTLN=4, IF=5, ELSE=6, ASIGN=7, PLUS=8, 
		MINUS=9, MULT=10, DIV=11, AND=12, OR=13, GT=14, LT=15, GEQ=16, LEQ=17, 
		EQ=18, BRACKET_OPEN=19, BRACKET_CLOSE=20, PAR_OPEN=21, PAR_CLOSE=22, SEMICOLON=23, 
		ID=24, NUMBER=25, CADENA=26, WS=27, LINE_COMMENT=28;
	public static final int
		RULE_program = 0, RULE_if_decl = 1, RULE_sentence = 2, RULE_var_decl = 3, 
		RULE_var_assig = 4, RULE_println = 5, RULE_asig_op = 6, RULE_operacion = 7;
	public static final String[] ruleNames = {
		"program", "if_decl", "sentence", "var_decl", "var_assig", "println", 
		"asig_op", "operacion"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'rosa'", "'tulipan'", "'petunia'", "'orquidea'", "'lirio'", "'hortensia'", 
		"':='", "' + '", "' - '", "' * '", "' / '", "'&&'", "'||'", "'>'", "'<'", 
		"'>='", "'<='", "'=='", "'{'", "'}'", "'('", "')'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PROGRAM", "INT", "STRING", "PRINTLN", "IF", "ELSE", "ASIGN", "PLUS", 
		"MINUS", "MULT", "DIV", "AND", "OR", "GT", "LT", "GEQ", "LEQ", "EQ", "BRACKET_OPEN", 
		"BRACKET_CLOSE", "PAR_OPEN", "PAR_CLOSE", "SEMICOLON", "ID", "NUMBER", 
		"CADENA", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "minicompilador.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public minicompiladorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(minicompiladorParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(minicompiladorParser.ID, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(minicompiladorParser.BRACKET_OPEN, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(minicompiladorParser.BRACKET_CLOSE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minicompiladorVisitor ) return ((minicompiladorVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			match(PROGRAM);
			setState(17);
			match(ID);
			setState(18);
			match(BRACKET_OPEN);
			setState(22);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << PRINTLN) | (1L << IF) | (1L << ID) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(19);
				sentence();
				}
				}
				setState(24);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(25);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_declContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(minicompiladorParser.IF, 0); }
		public TerminalNode PAR_OPEN() { return getToken(minicompiladorParser.PAR_OPEN, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(minicompiladorParser.PAR_CLOSE, 0); }
		public List<TerminalNode> BRACKET_OPEN() { return getTokens(minicompiladorParser.BRACKET_OPEN); }
		public TerminalNode BRACKET_OPEN(int i) {
			return getToken(minicompiladorParser.BRACKET_OPEN, i);
		}
		public List<TerminalNode> BRACKET_CLOSE() { return getTokens(minicompiladorParser.BRACKET_CLOSE); }
		public TerminalNode BRACKET_CLOSE(int i) {
			return getToken(minicompiladorParser.BRACKET_CLOSE, i);
		}
		public TerminalNode ELSE() { return getToken(minicompiladorParser.ELSE, 0); }
		public List<TerminalNode> ID() { return getTokens(minicompiladorParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(minicompiladorParser.ID, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(minicompiladorParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(minicompiladorParser.NUMBER, i);
		}
		public List<TerminalNode> CADENA() { return getTokens(minicompiladorParser.CADENA); }
		public TerminalNode CADENA(int i) {
			return getToken(minicompiladorParser.CADENA, i);
		}
		public TerminalNode GT() { return getToken(minicompiladorParser.GT, 0); }
		public TerminalNode LT() { return getToken(minicompiladorParser.LT, 0); }
		public TerminalNode GEQ() { return getToken(minicompiladorParser.GEQ, 0); }
		public TerminalNode LEQ() { return getToken(minicompiladorParser.LEQ, 0); }
		public TerminalNode EQ() { return getToken(minicompiladorParser.EQ, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public If_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).enterIf_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).exitIf_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minicompiladorVisitor ) return ((minicompiladorVisitor<? extends T>)visitor).visitIf_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_declContext if_decl() throws RecognitionException {
		If_declContext _localctx = new If_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_if_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			match(IF);
			setState(28);
			match(PAR_OPEN);
			setState(29);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << NUMBER) | (1L << CADENA))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(30);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << LT) | (1L << GEQ) | (1L << LEQ) | (1L << EQ))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(31);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << NUMBER) | (1L << CADENA))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(32);
			match(PAR_CLOSE);
			setState(33);
			match(BRACKET_OPEN);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << PRINTLN) | (1L << IF) | (1L << ID) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(34);
				sentence();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
			match(BRACKET_CLOSE);
			setState(41);
			match(ELSE);
			setState(42);
			match(BRACKET_OPEN);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << PRINTLN) | (1L << IF) | (1L << ID) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(43);
				sentence();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Var_assigContext var_assig() {
			return getRuleContext(Var_assigContext.class,0);
		}
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public Asig_opContext asig_op() {
			return getRuleContext(Asig_opContext.class,0);
		}
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public If_declContext if_decl() {
			return getRuleContext(If_declContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minicompiladorVisitor ) return ((minicompiladorVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		try {
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				var_decl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				var_assig();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				println();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(54);
				asig_op();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				operacion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(56);
				if_decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(minicompiladorParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(minicompiladorParser.SEMICOLON, 0); }
		public TerminalNode INT() { return getToken(minicompiladorParser.INT, 0); }
		public TerminalNode STRING() { return getToken(minicompiladorParser.STRING, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minicompiladorVisitor ) return ((minicompiladorVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==STRING) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(60);
			match(ID);
			setState(61);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assigContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(minicompiladorParser.ID, 0); }
		public TerminalNode ASIGN() { return getToken(minicompiladorParser.ASIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(minicompiladorParser.SEMICOLON, 0); }
		public TerminalNode NUMBER() { return getToken(minicompiladorParser.NUMBER, 0); }
		public TerminalNode CADENA() { return getToken(minicompiladorParser.CADENA, 0); }
		public Var_assigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).enterVar_assig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).exitVar_assig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minicompiladorVisitor ) return ((minicompiladorVisitor<? extends T>)visitor).visitVar_assig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_assigContext var_assig() throws RecognitionException {
		Var_assigContext _localctx = new Var_assigContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_assig);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(ID);
			setState(64);
			match(ASIGN);
			setState(65);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==CADENA) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(66);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintlnContext extends ParserRuleContext {
		public TerminalNode PRINTLN() { return getToken(minicompiladorParser.PRINTLN, 0); }
		public TerminalNode SEMICOLON() { return getToken(minicompiladorParser.SEMICOLON, 0); }
		public TerminalNode NUMBER() { return getToken(minicompiladorParser.NUMBER, 0); }
		public TerminalNode CADENA() { return getToken(minicompiladorParser.CADENA, 0); }
		public PrintlnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_println; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).enterPrintln(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).exitPrintln(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minicompiladorVisitor ) return ((minicompiladorVisitor<? extends T>)visitor).visitPrintln(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintlnContext println() throws RecognitionException {
		PrintlnContext _localctx = new PrintlnContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_println);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(PRINTLN);
			setState(69);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==CADENA) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(70);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Asig_opContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(minicompiladorParser.ID, 0); }
		public TerminalNode ASIGN() { return getToken(minicompiladorParser.ASIGN, 0); }
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public Asig_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asig_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).enterAsig_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).exitAsig_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minicompiladorVisitor ) return ((minicompiladorVisitor<? extends T>)visitor).visitAsig_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asig_opContext asig_op() throws RecognitionException {
		Asig_opContext _localctx = new Asig_opContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_asig_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(ID);
			setState(73);
			match(ASIGN);
			setState(74);
			operacion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(minicompiladorParser.SEMICOLON, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(minicompiladorParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(minicompiladorParser.NUMBER, i);
		}
		public TerminalNode PLUS() { return getToken(minicompiladorParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(minicompiladorParser.MINUS, 0); }
		public TerminalNode MULT() { return getToken(minicompiladorParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(minicompiladorParser.DIV, 0); }
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).enterOperacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minicompiladorListener ) ((minicompiladorListener)listener).exitOperacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minicompiladorVisitor ) return ((minicompiladorVisitor<? extends T>)visitor).visitOperacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(76);
				match(NUMBER);
				setState(77);
				match(PLUS);
				setState(78);
				match(NUMBER);
				}
				break;
			case 2:
				{
				setState(79);
				match(NUMBER);
				setState(80);
				match(MINUS);
				setState(81);
				match(NUMBER);
				}
				break;
			case 3:
				{
				setState(82);
				match(NUMBER);
				setState(83);
				match(MULT);
				setState(84);
				match(NUMBER);
				}
				break;
			case 4:
				{
				setState(85);
				match(NUMBER);
				setState(86);
				match(DIV);
				setState(87);
				match(NUMBER);
				}
				break;
			}
			setState(90);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}